// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IP Overview Component rendering it renders the default IP Overview 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup e1v2bxdw0 emotion-euiFlexGroup-responsive-l-flexStart-stretch-row-OverviewWrapper"
  >
    <button
      aria-label="Inspect"
      class="euiButtonIcon inspectButtonComponent emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
      data-test-subj="inspect-icon-button"
      disabled=""
      title="Inspect"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="inspect"
      />
    </button>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Location
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_city_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.city_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
            , 
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_region_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.region_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Autonomous system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_organization_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.organization.name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    Test Org
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              /
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_number"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.number"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    12345
                  </span>
                </span>
              </div>
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-provider-id="draggableId.content.host-id-renderer-default-draggable-ip-overview-host-id"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.id"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="securitySolutionFlyoutLink"
                  type="button"
                >
                  b19a781f683541a7a25ee345133aa399
                </button>
              </span>
            </span>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-test-subj="cellActions-renderContent-host.name"
          >
            <div>
              <div
                class="euiPopover emotion-euiPopover-inline-block"
              >
                <div>
                  <div
                    data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
                    tabindex="-1"
                  >
                    <span
                      class="c1"
                      data-test-subj="render-content-host.name"
                    >
                      <span
                        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                      >
                        <button
                          class="euiLink emotion-euiLink-primary"
                          data-test-subj="securitySolutionFlyoutLink"
                          type="button"
                        >
                          raspberrypi
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          WhoIs
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <a
              class="euiLink emotion-euiLink-primary"
              data-test-subj="externalLink"
              href="https://www.iana.org/whois?q=10.10.10.10"
              rel="noopener noreferrer"
              target="_blank"
            >
              iana.org
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Reputation
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        />
      </dl>
    </div>
  </div>
</div>
`;

exports[`IP Overview Component rendering it renders the side panel IP overview 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup e1v2bxdw0 emotion-euiFlexGroup-l-flexStart-stretch-column-OverviewWrapper"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Location
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_city_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.city_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
            , 
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_region_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.region_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Autonomous system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_organization_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.organization.name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    Test Org
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              /
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_number"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.number"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    12345
                  </span>
                </span>
              </div>
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-provider-id="draggableId.content.host-id-renderer-default-draggable-ip-overview-host-id"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.id"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="securitySolutionFlyoutLink"
                  type="button"
                >
                  b19a781f683541a7a25ee345133aa399
                </button>
              </span>
            </span>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-test-subj="cellActions-renderContent-host.name"
          >
            <div>
              <div
                class="euiPopover emotion-euiPopover-inline-block"
              >
                <div>
                  <div
                    data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
                    tabindex="-1"
                  >
                    <span
                      class="c1"
                      data-test-subj="render-content-host.name"
                    >
                      <span
                        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                      >
                        <button
                          class="euiLink emotion-euiLink-primary"
                          data-test-subj="securitySolutionFlyoutLink"
                          type="button"
                        >
                          raspberrypi
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          WhoIs
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <a
              class="euiLink emotion-euiLink-primary"
              data-test-subj="externalLink"
              href="https://www.iana.org/whois?q=10.10.10.10"
              rel="noopener noreferrer"
              target="_blank"
            >
              iana.org
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Reputation
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        />
      </dl>
    </div>
  </div>
</div>
`;
